--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -1,11 +1,8 @@
 spring:
   datasource:
-    url: jdbc:sqlite:clubsocios.db
-    driver-class-name: org.sqlite.JDBC
+    url: jdbc:mysql://localhost:3306/clubsocios
+    username: admin
+    password: admin
   jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.SQLiteDialect
-
-
-spring.jpa.hibernate.ddl-auto: create-drop
+    hibernate:
+      ddl-auto: update
