--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/clubsocios
-    username: admin
-    password: admin
+    username: root
+    password: root
   jpa:
     hibernate:
       ddl-auto: create
@@ -21,3 +21,6 @@ spring:
       hibernate:
         dialect:
           MySQL5InnoDBDialect: org.hibernate.dialect.MySQL5InnoDBDialect
+
+
+    spring.jpa.properties.jakarta.persitence.schema-generate.database.action: none
